init tray application, updated sample application with minimal beans